--- a/package/article2.html
+++ b/package/article2.html
@@ -3,10 +3,10 @@
         <nav class="left">
             <button class="icon ellipsis-vert" data-action="aside">Aside<span class="counter">5</span></button>
         </nav>
-        <h1>TaKo2!!</h1>
+        <h1>Asynchornous Article</h1>
     </header>
-    <section id="main2">
-        <p>Article 2</p>
-        <button class="" data-article="article_1">Article 1</button>
+    <section id="main2" class="indented">
+        <p>This article has been loaded asynchronously</p>
+        <button class="wide" data-article="article_1">Go Back</button>
     </section>
 </article>
