--- a/documentation/index.html
+++ b/documentation/index.html
@@ -113,17 +113,17 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="/"><b>TAKO</b></a>
-            </div>
-            <div class="navbar-collapse collapse">
-              <ul class="nav navbar-nav navbar-right">
-                <li><a href="#">Documentation</a></li>
-                <li><a href="/demo">Demo</a></li>
-                <li><a href="/download/tako.zip">Download</a></li>
-                <li><a href="https://twitter.com/takojs" target="_blank">Twitter</a></li>
-                <li><a href="https://groups.google.com/forum/#!forum/takojs" target="_blank">Community</a></li>
-              </ul>
-            </div><!--/.nav-collapse -->
+              <a class="navbar-brand" href="/tako/"><b>TAKO</b></a>
+        </div>
+        <div class="navbar-collapse collapse">
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="/tako/documentation">Documentation</a></li>
+            <li><a href="/tako/demo">Demo</a></li>
+            <li><a href="/tako/download/tako.zip">Download</a></li>
+            <li><a href="https://twitter.com/takojs" target="_blank">Twitter</a></li>
+            <li><a href="https://groups.google.com/forum/#!forum/takojs" target="_blank">Community</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
           </div>
         </div>
 
