Fixed iframe path and added zip

--- a/demo/index.html
+++ b/demo/index.html
@@ -61,7 +61,7 @@
 
     <div class="mycontainer">
       <div id="phone_container">
-        <iframe src="/app/" frameborder="0" id="tako_frame"></iframe>
+        <iframe src="/tako/app/" frameborder="0" id="tako_frame"></iframe>
       </div>
       <div id="editor_container">
         <div id="editor"></div>
