--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
         </div>
     </div>
 
-	<div class="container" id="promote">
+	<!-- <div class="container" id="promote">
 		<hr>
         <div class="form-inline" role="form">
     		<div class="row centered">
@@ -266,7 +266,7 @@
                 </div>
             </div>
         </div>
-	</div>
+	</div> -->
 
 	<div class="container" id="footer">
 		<hr>
