--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,10 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <link rel="shortcut icon" href="/tako/favicon.ico">
+    <link rel="apple-touch-icon" href="/tako/documentation/assets/img/apple-touch-icon.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/tako/documentation/assets/img/apple-touch-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/tako/documentation/assets/img/apple-touch-icon-114x114.png">
 
     <meta http-equiv="x-ua-compatible" content="IE=edge" />
 
