--- a/demo/index.html
+++ b/demo/index.html
@@ -13,7 +13,7 @@
     <!-- <meta name="googlebot" content="INDEX,FOLLOW"> -->
     <meta name="robots" CONTENT="NOODP,FOLLOW">
     <meta name="googlebot" CONTENT="NOODP,FOLLOW">
-    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="shortcut icon" href="/tako/favicon.ico">
 
     <title>Tako - Create awesome apps in a simple way</title>
 
