--- a/documentation/index.html
+++ b/documentation/index.html
@@ -17,7 +17,7 @@
         <link href="assets/js/google-code-prettify/prettify.css" rel="stylesheet">
         <link href='http://fonts.googleapis.com/css?family=Lato:300,400,900' rel='stylesheet' type='text/css'>
 
-        <link rel="shortcut icon" href="favicon.ico">
+        <link rel="shortcut icon" href="/tako/favicon.ico">
 
 		<style type="text/css">
         body {
