--- a/icons/index.html
+++ b/icons/index.html
@@ -233,7 +233,7 @@ body {
 </style>
     <link rel="stylesheet" href="assets/css/tako.css">
     <link rel="stylesheet" href="assets/css/animation.css">
-    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="shortcut icon" href="/tako/favicon.ico">
     <!--[if IE 7]>
     <link rel="stylesheet" href="css/tako-ie7.css">
     <![endif]-->
